# research-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml  publish-pypi.yml
docs/: ARCHITECTURE.md  FEATURE_BACKLOG.md  MCP_INTEGRATION.md  ROADMAP.md  claude_desktop_config.json
docs/sdd/phase-1/: 001-graph-orchestration.md  002-search-pipeline.md  003-checkpoint-system.md  004-cli-interface.md  005-report-synthesis.md
frontend/: index.html  package.json  tailwind.config.ts  tsconfig.json
frontend/scripts/: generate-api-types.mjs
frontend/src/: main.tsx
frontend/src/api/: client.ts  generated.ts
frontend/src/hooks/: useLocalStorage.ts  useSessionEvents.ts
frontend/src/pages/: AnalyticsPage.tsx  HistoryPage.tsx  SessionDetailPage.tsx  SessionsPage.tsx
frontend/src/styles/: index.css
frontend/src/types/: api.ts
frontend/src/utils/: sessions.ts
roadmap/: WORK_STATUS.md
src/research_agent/: __init__.py  checkpoints.py  cli.py  compiled_output.py  config.py  context.py  costs.py  dashboard.py  doctor.py  embeddings.py  enhance_context.py  enhance_engine.py  enhance_models.py  enhance_store.py  evaluation.py  event_log.py  exceptions.py  graph.py  key_rotation.py  llm_cache.py  logging.py  memory.py  metrics.py  models.py  pdf_output.py  plan_editor.py  progress.py  prompt_cache.py  prompt_parser.py  prompt_version.py  quality.py  rate_limiter.py  report_output.py  state.py  token_estimation.py
src/research_agent/agentprompts/: __init__.py  bridge.py  build_prompt.py  registry.py  templates.py  watch.py
src/research_agent/api/: __init__.py  app.py  auth.py  events.py  manager.py  models.py  notifications.py  server.py  static.py
src/research_agent/commands/: __init__.py
src/research_agent/intelligence/: __init__.py  academic.py  github.py  models.py  orchestrator.py  rss.py  youtube.py
src/research_agent/mcp/: models.py  (+7 more)
tests/: conftest.py
tests/integration/: test_checkpoint_resume.py  test_cost_degradation.py  test_e2e_smoke.py  test_evaluation_pipeline.py  test_graph.py  test_report_logging.py  test_search_pipeline.py
tests/unit/: test_agentprompts.py  test_checkpoints.py  test_cli.py  test_compiled_output.py  test_config.py  test_containerization.py  test_context.py  test_costs.py  test_dashboard.py  test_doctor.py  test_embeddings.py  test_enhance.py  test_evaluation.py  test_event_log.py  test_exceptions.py  test_frontend_ui.py  test_intelligence.py  test_intelligence_orchestrator.py  test_key_rotation.py  test_knowledge_cli.py  test_knowledge_service.py  test_llm_cache.py  test_logging.py  test_memory.py  test_metrics.py  test_models.py  test_packaging.py  test_pdf_output.py  test_plan_editor.py  test_progress.py  test_prompt_cache.py  test_prompt_parser.py  test_prompt_version.py  test_quality.py  test_rate_limiter.py  test_report_output.py  test_revision.py  test_state.py  test_token_estimation.py  test_vcr_setup.py
website/: index.html  package-lock.json  package.json
website/src/: style.css
(+57 files in other folders)
