[project]
name = "research-agent"
version = "0.1.0"
description = "Crash-resilient deep research agent for the Apps That Build Apps ecosystem"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.14"
authors = [{ name = "Daniel Hernandez" }]
keywords = ["research", "agent", "langgraph", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain>=1.0,<2",
    "langgraph>=1.0,<2",
    "langchain-anthropic>=1.0,<2",
    "langchain-openai>=1.0,<2",
    "chromadb>=1.4,<2",
    "httpx>=0.28,<1",
    "trafilatura>=2.0,<3",
    "pydantic>=2.10,<3",
    "pydantic-settings[yaml]>=2.12,<3",
    "structlog>=25.1,<26",
    "rich>=13.9,<14",
    "tenacity>=8.1,<10",
    "tiktoken>=0.8,<1",
    "typer>=0.15,<1",
    "tavily-python>=0.5,<1",
]

[project.optional-dependencies]
local = ["sentence-transformers>=3.3,<4", "torch>=2.5,<3"]
pdf = ["pymupdf>=1.25,<2"]
google = ["langchain-google-genai>=2,<3"]

[dependency-groups]
dev = ["ruff>=0.9,<1", "mypy>=1.14,<2", "pre-commit>=4.0,<5"]
test = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "pytest-cov>=6.0,<7",
    "respx>=0.22,<1",
]

[project.scripts]
research-agent = "research_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_agent"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["research_agent"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
packages = ["research_agent"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "trafilatura.*",
    "tavily.*",
    "chromadb.*",
    "tiktoken.*",
    "langgraph.*",
    "langchain.*",
    "langchain_anthropic.*",
    "langchain_openai.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers -v"
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow",
]

[tool.coverage.run]
source = ["research_agent"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
